# array-box

./: .gitignore  README.md  THIRD_PARTY_LICENSES.md  apl-server.js  config.js  index.html  j-server.js  kap-server.cjs  keymap.js  package-lock.json  package.json  server-manager.cjs  server-manager.js  todo
.github/: TESTS.md  TODO.md
docker/: Dockerfile.apl  Dockerfile.j  Dockerfile.kap  Safe3.dyalog  build.sh
scripts/: build-j96-wasm.sh  docker-build-j-wasm.sh  generate-og-default.cjs  install-deps.sh  scrape-bqn-docs.cjs  scrape-j-docs.cjs  scrape-tinyapl-docs.cjs  scrape-uiua-docs.cjs  update-j-wasm.sh
servers/: api-gateway.cjs  apl-server.cjs  dashboard-server.cjs  j-server.cjs  kap-server.cjs  og-generator.cjs  permalink-server.cjs  sandbox.cjs  server-manager.cjs  stats.cjs
src/: bqn-docs.js  editor-features.js  j-docs.js  keyboard.js  keymap.js  primitive-translate.js  syntax.js  theme.css  tinyapl-docs.js  todo  uiua-docs.js
uiua-wasm/: Cargo.toml  build.sh
uiua-wasm/src/: lib.rs
wasm/tinyapl/: tinyapl.js
