[package]
name = "uiua-wasm"
version = "0.1.0"
edition = "2021"
description = "Uiua WASM bindings for Array Box"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uiua = { version = "0.14", default-features = false, features = ["batteries", "web"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Required for WASM random number support
getrandom = { version = "0.2", features = ["js"] }
# web-sys with required features for uiua web
web-sys = { version = "0.3", features = ["Performance", "Window"] }

[profile.release]
opt-level = "s"
lto = true
